--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://christianjc.github.io/recipeReactApp"
+  "homepage": "https://christianjc.github.io/recipeReactApp/"
 }
